--- a/style.css
+++ b/style.css
@@ -2,3 +2,8 @@ body {
     background-color: purple; 
     font-family: Arial, Helvetica, sans-serif;
 }
+
+ul {
+    list-style-type: disc;
+    border: 1px dotted red;
+}
